
2010-July-10 Struan Robertson

	* System.cpp/.h: Altered so as to always find the location of sinks. (Bug found 
        when running the i-propyle example.)

2010-July-08 Struan Robertson

	* HinderRotorA.cpp/.h: Altered to allow for a more generic analytical potential.

2010-July-05 Struan Robertson

	* HinderRotorA.cpp/.h: Input method extended to allow hindering potential data
        points at equal intervals to be read and and transformed to give a cosine
        expansion.

2010-July-03 Struan Robertson

	* HinderRotorA.cpp/.h: Changes required for asymmetric hindered rotor potential.

2010-July-03 Struan Robertson

	* System.cpp: Additional output of rate coefficient table to cinfo stream.
        * Methyl_H_to_Methane.xml: Corrected for missing reference reaction.

2010-June-27 Struan Robertson

	* Reaction.h: Minor update to remove m_GrainKbmc variable and place it only
        on those reaction that require it.
        * MolecularCmponents.cpp: Minor code changes to improve readability.

2010-June-27 Struan Robertson

	* fitting.cpp, MesmerILT: Changes to parameter reading and fitting algorithm to
        improve the fitting of the Methyl+H example.
        * Methyl_H_to_Methane.xml: Minor changes to allow for testing.

2010-June-13 Struan Robertson

	* MesmerTools.cpp: Rolling some changes back to 286 for grain averaging
        method to catch possible divide by zero error.
        * Methyl_H_to_Methane.xml: Updated to include reference reaction.

2010-June-13 Struan Robertson

	* System.cpp/.h: Chi-squared method altered to account for excess
        concentration in the case of a bimolecular association reaction.

2010-June-06 Struan Robertson

	* HinderRotorA.cpp/.h: Addition of QM hindered rotor torsion potential.

2010-June-03 Struan Robertson

	* HinderRotorA.cpp: Addition of QM Hamiltonian matrix in preparation for
	adding torsion potential.

2010-May-23 Struan Robertson

	* HinderRotorA.h/.cpp: Initial implementation of hindered rotor. QM one-