@@ -6,27 +6,27 @@
   <moleculeList>
     <molecule id="i-propyl" spinMultiplicity="2">
       <atomArray>
-        <atom id="a1" elementType="C"/>
-        <atom id="a2" elementType="C" spinMultiplicity="2"/>
-        <atom id="a3" elementType="C"/>
-        <atom id="a4" elementType="H"/>
-        <atom id="a5" elementType="H"/>
-        <atom id="a6" elementType="H"/>
-        <atom id="a7" elementType="H"/>
-        <atom id="a8" elementType="H"/>
-        <atom id="a9" elementType="H"/>
-        <atom id="a10" elementType="H"/>
+        <atom id="a1"  elementType="C" x3=" 0.128860529"  y3="-0.022026773" z3="-1.305772159"/>
+        <atom id="a2"  elementType="C" x3="-0.601095636"  y3="-0.048676979" z3=" 0.000000000" spinMultiplicity="2"/>
+        <atom id="a3"  elementType="C" x3=" 0.128860529"  y3="-0.022026773" z3=" 1.305772159"/>
+        <atom id="a4"  elementType="H" x3=" 0.988539511"  y3="-0.709839764" z3="-1.304715599"/>
+        <atom id="a5"  elementType="H" x3=" 0.543790894"  y3=" 0.980514186" z3="-1.532163133"/>
+        <atom id="a6"  elementType="H" x3="-0.523177009"  y3="-0.290316406" z3="-2.146336256"/>
+        <atom id="a7"  elementType="H" x3="-1.674932213"  y3=" 0.132014494" z3=" 0.000000000"/>
+        <atom id="a8"  elementType="H" x3=" 0.543790894"  y3=" 0.980514186" z3=" 1.532163133"/>
+        <atom id="a9"  elementType="H" x3=" 0.988539511"  y3="-0.709839764" z3=" 1.304715599"/>
+        <atom id="a10" elementType="H" x3="-0.523177009"  y3="-0.290316406" z3=" 2.146336256"/> 
       </atomArray>
       <bondArray>
-        <bond atomRefs2="a1 a2" order="1"/>
-        <bond atomRefs2="a2 a3" order="1"/>
-        <bond atomRefs2="a1 a4" order="1"/>
-        <bond atomRefs2="a1 a5" order="1"/>
-        <bond atomRefs2="a1 a6" order="1"/>
-        <bond atomRefs2="a2 a7" order="1"/>
-        <bond atomRefs2="a3 a8" order="1"/>
-        <bond atomRefs2="a3 a9" order="1"/>
-        <bond atomRefs2="a3 a10" order="1"/>
+        <bond id="b1"  atomRefs2="a1 a2" order="1"/>
+        <bond id="b2"  atomRefs2="a2 a3" order="1"/>
+        <bond id="b3"  atomRefs2="a1 a4" order="1"/>
+        <bond id="b4"  atomRefs2="a1 a5" order="1"/>
+        <bond id="b5"  atomRefs2="a1 a6" order="1"/>
+        <bond id="b6"  atomRefs2="a2 a7" order="1"/>
+        <bond id="b7"  atomRefs2="a3 a8" order="1"/>
+        <bond id="b8"  atomRefs2="a3 a9" order="1"/>
+        <bond id="b9"  atomRefs2="a3 a10" order="1"/>
       </bondArray>
       <propertyList>
         <property dictRef="me:ZPE">
@@ -39,12 +39,12 @@
           <scalar>18</scalar>
         </property>
         <property dictRef="me:vibFreqs">
+          <!-- The last two frequencies removed and replaced by hindered rotors.-->
           <array units="cm-1">
             3052.0 2968.2 2968.2 2967.7 2920.0 2887.0 2850.0 1468.0 1464.0 1462.0
             1440.0 1378.0 1338.0 1292.0 1200.0 1165.0 1053.8  921.7  879.0  748.1
-             369.2  364.0  300.0  300.0
+             369.2  364.0
           </array>
-          <!-- The last two frequencies approximately represent internal motion.-->
         </property>
         <property dictRef="me:MW">
           <scalar>43</scalar>
@@ -62,29 +62,48 @@
           <scalar>2</scalar>
         </property>
       </propertyList>
+
+      <me:ExtraDOSCMethod name="HinderedRotorA">
+        <bondRef>b1</bondRef>
+        <me:HinderedRotorPotential format="analytical" units="kJ/mol">
+          <me:PotentialPoint index="0"  coefficient="6.2"/>
+          <me:PotentialPoint index="3"  coefficient="-6.2"/>
+        </me:HinderedRotorPotential>
+        <me:periodicity>3</me:periodicity>
+      </me:ExtraDOSCMethod>
+
+      <me:ExtraDOSCMethod name="HinderedRotorA">
+        <bondRef>b2</bondRef>
+        <me:HinderedRotorPotential format="analytical" units="kJ/mol">
+          <me:PotentialPoint index="0"  coefficient="6.2"/>
+          <me:PotentialPoint index="3"  coefficient="-6.2"/>
+        </me:HinderedRotorPotential>
+        <me:periodicity>3</me:periodicity>
+      </me:ExtraDOSCMethod>
+
     </molecule>
 
     <molecule id="propene">
       <atomArray>
-        <atom id="a1" elementType="C"/>
-        <atom id="a2" elementType="C"/>
-        <atom id="a3" elementType="C"/>
-        <atom id="a4" elementType="H"/>
-        <atom id="a5" elementType="H"/>
-        <atom id="a6" elementType="H"/>
-        <atom id="a7" elementType="H"/>
-        <atom id="a8" elementType="H"/>
-        <atom id="a9" elementType="H"/>
+        <atom id="a1" elementType="C" x3="-3.685984850"  y3=" 0.077483728" z3="-0.197902983"/>
+        <atom id="a2" elementType="C" x3="-2.443578324"  y3=" 0.892515657" z3=" 0.054873334"/>
+        <atom id="a3" elementType="C" x3="-1.208794483"  y3=" 0.399619435" z3=" 0.200015818"/>
+        <atom id="a4" elementType="H" x3="-3.463850215"  y3="-0.994502084" z3="-0.251852635"/>
+        <atom id="a5" elementType="H" x3="-4.169920341"  y3=" 0.376202859" z3="-1.139333182"/>
+        <atom id="a6" elementType="H" x3="-4.430353413"  y3=" 0.234884390" z3=" 0.596362697"/>
+        <atom id="a7" elementType="H" x3="-2.589968192"  y3=" 1.973004378" z3=" 0.120880432"/>
+        <atom id="a8" elementType="H" x3="-1.008576389"  y3="-0.670142974" z3=" 0.142958719"/>
+        <atom id="a9" elementType="H" x3="-0.352902075"  y3=" 1.046439080" z3=" 0.381101833"/>
       </atomArray>
       <bondArray>
-        <bond atomRefs2="a1 a2" order="1"/>
-        <bond atomRefs2="a2 a3" order="2"/>
-        <bond atomRefs2="a1 a4" order="1"/>
-        <bond atomRefs2="a1 a5" order="1"/>
-        <bond atomRefs2="a1 a6" order="1"/>
-        <bond atomRefs2="a2 a7" order="1"/>
-        <bond atomRefs2="a3 a8" order="1"/>
-        <bond atomRefs2="a3 a9" order="1"/>
+        <bond id="b1"  atomRefs2="a1 a2" order="1"/>
+        <bond id="b2"  atomRefs2="a2 a3" order="2"/>
+        <bond id="b3"  atomRefs2="a1 a4" order="1"/>
+        <bond id="b4"  atomRefs2="a1 a5" order="1"/>
+        <bond id="b5"  atomRefs2="a1 a6" order="1"/>
+        <bond id="b6"  atomRefs2="a2 a7" order="1"/>
+        <bond id="b7"  atomRefs2="a3 a8" order="1"/>
+        <bond id="b7"  atomRefs2="a3 a9" order="1"/>
       </bondArray>
       <propertyList>
         <property dictRef="me:ZPE">
@@ -99,12 +118,11 @@
           <scalar>2</scalar>
         </property>
         <property dictRef="me:vibFreqs">
+          <!-- The last frequency removed and replaced by a hindered rotor.-->
           <array units="cm-1">
             3091.0 3022.0 2991.0 2973.0 2952.8 2931.0 1652.8 1458.5 1442.5 1414.0
             1378.0 1298.0 1177.5 1044.7  990.0  934.5  919.0  912.0  575.2  428.0
-             300.0
           </array>
-          <!-- The last frequency approximately represent internal motion.-->
         </property>
         <property dictRef="me:MW">
           <scalar>42</scalar>
@@ -113,6 +131,16 @@
           <scalar>1</scalar>
         </property>
       </propertyList>
+      
+      <me:ExtraDOSCMethod name="HinderedRotorA">
+        <bondRef>b1</bondRef>
+        <me:HinderedRotorPotential format="analytical" units="kJ/mol">
+          <me:PotentialPoint index="0"  coefficient="6.2"/>
+          <me:PotentialPoint index="3"  coefficient="-6.2"/>
+        </me:HinderedRotorPotential>
+        <me:periodicity>3</me:periodicity>
+      </me:ExtraDOSCMethod>
+
     </molecule>
 
     <molecule id="H">
@@ -191,7 +219,7 @@
       <me:PTpair me:units="PPCC" me:P="30.0e16" me:T="740.">
         <me:experimentalRate ref1="i-propyl" ref2="i-propyl" error="1.0">71.1</me:experimentalRate>
       </me:PTpair>
-      <!--<me:PTpair me:units="PPCC" me:P="12.0e16" me:T="750.">
+      <me:PTpair me:units="PPCC" me:P="12.0e16" me:T="750.">
         <me:experimentalRate ref1="i-propyl" ref2="i-propyl" error="1.0">55.3</me:experimentalRate>
       </me:PTpair>
       <me:PTpair me:units="PPCC" me:P="18.0e16" me:T="750.">
@@ -379,7 +407,7 @@
       </me:PTpair>
       <me:PTpair me:units="PPCC" me:P="3.01e16" me:T="860.">
         <me:experimentalRate ref1="i-propyl" ref2="i-propyl" error="1.0">378.</me:experimentalRate>
-      </me:PTpair>-->
+      </me:PTpair>
       <me:PTpair me:units="PPCC" me:P="6.03e16" me:T="860.">
         <me:experimentalRate ref1="i-propyl" ref2="i-propyl" error="1.0">535.</me:experimentalRate>
       </me:PTpair>
@@ -401,17 +429,9 @@
 
   <me:control>
     <me:calcMethod>fitting</me:calcMethod>
-    <!--<me:fittingTolerance>0.1</me:fittingTolerance>-->
-    <me:fittingIterations>2</me:fittingIterations>
-    <!--<me:testDOS />-->
+    <me:fittingIterations>5</me:fittingIterations>
+    <me:testDOS />
     <!--<me:testMicroRates />-->
-    <!--<me:printGrainDOS />-->
-    <!--<me:printCellDOS />-->
-    <!--<me:printReactionOperatorColumnSums />-->
-    <!--<me:printGrainkfE />-->
-    <!--<me:printGrainBoltzmann />-->
-    <!--<me:printGrainkbE />-->
-    <!--<me:printSpeciesProfile />-->
     <me:eigenvalues>1</me:eigenvalues>
   </me:control>
 
